[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Animations/Hurt.tres" type="Animation" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0238

[node name="Enemy" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemySprite" type="Sprite" parent="."]
modulate = Color( 0.85098, 0.0901961, 0.768627, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="HurtAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("")
anims/Hurt = ExtResource( 3 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionCircle" type="CollisionShape2D" parent="HitBox"]
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[node name="CollideBox" type="Area2D" parent="."]

[node name="CollisionCircle" type="CollisionShape2D" parent="CollideBox"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
